--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=http:/149.165.154.105:8081/" />
+    <meta http-equiv="refresh" content="0;url=http://149.165.153.10:7860/" />
     <title></title>
   </head>
  <body></body>
